<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jp_gnss_hat</name>
  <version>1.0.0</version>
  <description>
    ROS2 driver node for Jimmy Paputto GNSS HAT family:
    L1 GNSS HAT (NEO-M9N), L1/L5 GNSS TIME HAT (NEO-F10T),
    L1/L5 GNSS RTK HAT (NEO-F9P).
    Publishes full navigation data on custom jp_gnss_hat topics.
  </description>
  <maintainer email="dariusz.domanski@jimmypaputto.com">Dariusz Domański</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>libgpiod-dev</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
